--- a/GitTest/MainWindow.xaml
+++ b/GitTest/MainWindow.xaml
@@ -3,8 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Label Content="This is a new Label ..." HorizontalAlignment="Left" Height="40" Margin="63,39,0,0" VerticalAlignment="Top" Width="144"/>
-        <Button Content="and a button" HorizontalAlignment="Left" Height="22" Margin="73,112,0,0" VerticalAlignment="Top" Width="106"/>
+        <Label x:Name="HeaderLabel" Content="This is a new Label ..." HorizontalAlignment="Left" Height="40" Margin="63,39,0,0" VerticalAlignment="Top" Width="144"/>
+        <Button x:Name="Button_1" Content="and a button" HorizontalAlignment="Left" Height="22" Margin="73,112,0,0" VerticalAlignment="Top" Width="97"/>
+        <Button x:Name="Button_2" Content="another Button" HorizontalAlignment="Left" Height="19" Margin="73,139,0,0" VerticalAlignment="Top" Width="97"/>
+        <Image HorizontalAlignment="Left" Height="110" Margin="73,178,0,0" VerticalAlignment="Top" Width="109" Source="download.jpg"/>
 
     </Grid>
 </Window>
