--- a/GitTest/TestTool.xaml
+++ b/GitTest/TestTool.xaml
@@ -6,6 +6,7 @@
         <Label Content="This is a new Label ..." HorizontalAlignment="Left" Height="40" Margin="63,39,0,0" VerticalAlignment="Top" Width="144"/>
         <Button Content="and a button" HorizontalAlignment="Left" Height="22" Margin="73,112,0,0" VerticalAlignment="Top" Width="106"/>
         <Image HorizontalAlignment="Left" Height="98" Margin="73,166,0,0" VerticalAlignment="Top" Width="90" Source="download.jpg"/>
+        <CheckBox Content="CheckBox" HorizontalAlignment="Left" Height="19" Margin="287,182,0,0" VerticalAlignment="Top" Width="147"/>
 
     </Grid>
 </Window>
